  versions.
* …

=== New developer features in 1.46 ===

* Various functions are now marked with the #[\NoDiscard] attribute, which will
  cause PHP 8.5 (and Phan) to emit warnings when their return values are not
  used, as that is usually a mistake. This has no effect when running on PHP
  8.4 or earlier.
* …

=== External library changes in 1.46 ===

==== New external libraries ====

* …

===== New development-only external libraries =====

* …

==== Changed external libraries ====

* Updated codex, codex-design-tokens and codex-icons
  from v2.3.2 to v2.3.4.
* Updated jsonrainbow/json-schema from 5.3.0 to 5.3.1.
* Updated monolog/monolog from 2.9.3 to 2.11.0.
* Updated oojs/oojs-ui (OOUI) from v0.53.0 to v0.53.1.
* Updated pear/net_smtp from 1.12.1 to 1.12.2.
* Updated psy/psysh from ^0.12.3 to 0.12.19.
* Updated symfony/yaml from 6.4.26 to 6.4.30.
* Updated wikimedia/bcp-47-code from 2.0.1 to 2.0.2.
* Updated wikimedia/css-sanitizer from 6.1.0 to 6.2.0.
* Updated wikimedia/ip-utils from 5.0.0 to 6.0.1.
* Updated wikimedia/less.php from 5.2.2 to 5.5.0.
* Updated wikimedia/minify from 2.9.0 to 2.10.0.
* Updated wikimedia/relpath from 4.0.2 to 4.1.1.
* Updated wikimedia/running-stat from 2.1.0 to 2.2.0.
* Updated wikimedia/shellbox from 4.3.0 to 4.4.0.
* Updated wikimedia/testing-access-wrapper from 3.0.0 to 4.0.0.
* Updated wikimedia/timestamp from 5.0.0 to 5.1.0.
* Updated wikimedia/wrappedstring from 4.0.1 to 4.1.0.
* …

===== Changed development-only external libraries =====

* Updated doctrine/dbal from 3.10.0 to 3.10.4.
* Updated doctrine/sql-formatter from 1.5.2 to 1.5.4.
* Updated eslint-config-wikimedia from 0.31.0 to 0.32.3.
* Updated mck89/peast from 1.17.2 to 1.17.4.
* Updated mediawiki/mediawiki-phan-config from 0.18.0 to 0.19.0.
* Updated phpunit/phpunit from 9.6.21 to 9.6.34.
* Updated symfony/yaml from 6.4.25 to 6.4.26.
* Updated wikimedia/alea from 1.0.0 to 1.0.1.
* …

==== Removed external libraries ====

* Removed symfony/polyfill-php82.
* …
