@@ -36,17 +36,18 @@
 		"ext-xmlreader": "*",
 		"guzzlehttp/guzzle": "7.10.0",
 		"justinrainbow/json-schema": "5.3.1",
-		"lcobucci/jwt": "4.1.5",
+		"lcobucci/jwt": "5.6.0",
 		"liuggio/statsd-php-client": "1.0.18",
 		"mck89/peast": "1.17.4",
 		"monolog/monolog": "2.11.0",
+		"okvpn/clock-lts": "1.0.0",
 		"oojs/oojs-ui": "0.53.1",
 		"pear/mail": "2.0.0",
 		"pear/mail_mime": "1.10.12",
 		"pear/net_smtp": "1.12.2",
 		"php": ">=8.2.0",
 		"psr/container": "2.0.2",
-		"psr/http-message": "1.1",
+		"psr/http-message": "2.0",
 		"psr/log": "1.1.4",
 		"ralouphie/getallheaders": "3.0.3",
 		"symfony/polyfill-php83": "1.33.0",
