@@ -2,6 +2,7 @@
 
 namespace Wikimedia\ParamValidator\Util;
 
+use Psr\Http\Message\StreamInterface;
 use Psr\Http\Message\UploadedFileInterface;
 use RuntimeException;
 
@@ -83,7 +84,7 @@ class UploadedFile implements UploadedFileInterface {
 	}
 
 	/** @inheritDoc */
-	public function getStream() {
+	public function getStream(): StreamInterface {
 		if ( $this->stream ) {
 			return $this->stream;
 		}
@@ -94,7 +95,7 @@ class UploadedFile implements UploadedFileInterface {
 	}
 
 	/** @inheritDoc */
-	public function moveTo( $targetPath ) {
+	public function moveTo( string $targetPath ): void {
 		$this->checkError();
 
 		if ( $this->fromUpload && !is_uploaded_file( $this->data['tmp_name'] ) ) {
@@ -118,23 +119,23 @@ class UploadedFile implements UploadedFileInterface {
 	}
 
 	/** @inheritDoc */
-	public function getSize() {
+	public function getSize(): ?int {
 		return $this->data['size'] ?? null;
 	}
 
 	/** @inheritDoc */
-	public function getError() {
+	public function getError(): int {
 		return $this->data['error'] ?? UPLOAD_ERR_NO_FILE;
 	}
 
 	/** @inheritDoc */
-	public function getClientFilename() {
+	public function getClientFilename(): ?string {
 		$ret = $this->data['name'] ?? null;
 		return $ret === '' ? null : $ret;
 	}
 
 	/** @inheritDoc */
-	public function getClientMediaType() {
+	public function getClientMediaType(): ?string {
 		$ret = $this->data['type'] ?? null;
 		return $ret === '' ? null : $ret;
 	}
